--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddMeasurement.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddMeasurement.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -25,28 +27,31 @@
             </Label>
          </children>
       </VBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Label text="Nombre de la Medida">
+            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Nombre de la Medida">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets right="20.0" />
+                  <Insets left="20.0" top="20.0" />
                </HBox.margin>
-               <padding>
-                  <Insets left="20.0" />
-               </padding>
             </Label>
             <TextField fx:id="TxtName" prefColumnCount="10">
                <font>
                   <Font name="Roboto" size="17.0" />
                </font>
+               <HBox.margin>
+                  <Insets left="20.0" top="20.0" />
+               </HBox.margin>
             </TextField>
             <Label text="*" textFill="#e10808">
                <font>
                   <Font name="Roboto Black" size="14.0" />
                </font>
+               <HBox.margin>
+                  <Insets top="20.0" />
+               </HBox.margin>
             </Label>
          </children>
          <VBox.margin>
@@ -56,40 +61,57 @@
             <Insets left="20.0" />
          </padding>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <padding>
             <Insets left="20.0" />
          </padding>
          <children>
-            <Label text="Escoja el item que será añadido la nueva medida">
+            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Escoja el item que será añadido la nueva medida">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets top="40.0" />
+                  <Insets left="20.0" top="20.0" />
                </HBox.margin>
             </Label>
             <ComboBox fx:id="ComboItems" prefHeight="26.0" prefWidth="184.0" style="-fx-font-size: 15pt;">
                <HBox.margin>
-                  <Insets left="20.0" top="40.0" />
+                  <Insets left="20.0" top="20.0" />
                </HBox.margin>
             </ComboBox>
          </children>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Button fx:id="BtnCancel" mnemonicParsing="false" onMouseClicked="#closeDialog" text="Cancelar">
+            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#AddMeasurement" styleClass="roundButton" stylesheets="@../css/styles.css" text="Ingresar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets right="200.0" />
+                  <Insets left="20.0" />
                </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/save_icon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
-            <Button mnemonicParsing="false" onMouseClicked="#AddMeasurement" text="Ingresar">
+            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
+               <HBox.margin>
+                  <Insets left="100.0" right="200.0" />
+               </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/cancel_icon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
          </children>
          <VBox.margin>
