--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddNewItem.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddNewItem.fxml
@@ -3,12 +3,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="454.0" prefWidth="1148.0" style="-fx-alignment: center;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller_Pages.AddNewItemController">
+<VBox prefHeight="529.0" prefWidth="1148.0" style="-fx-alignment: start; -fx-background-color: white;" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller_Pages.AddNewItemController">
    <children>
       <VBox prefHeight="70.0" prefWidth="674.0" style="-fx-alignment: center;">
          <children>
@@ -24,7 +28,7 @@
             </Label>
          </children>
       </VBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox prefHeight="55.0" prefWidth="1148.0" style="-fx-alignment: start;">
          <children>
             <Label text="Nombre del Item">
                <font>
@@ -55,22 +59,50 @@
             <Insets left="20.0" />
          </padding>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Button fx:id="BtnCancelar" mnemonicParsing="false" onMouseClicked="#closeDialog" text="Cancelar">
+            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#AddItem" styleClass="roundButton" stylesheets="@../css/styles.css" text="Ingresar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets right="200.0" />
+                  <Insets left="20.0" top="20.0" />
                </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/save_icon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
-            <Button mnemonicParsing="false" onMouseClicked="#AddItem" text="Ingresar">
+            <Button fx:id="BtnCancelar" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
+               <HBox.margin>
+                  <Insets left="100.0" right="200.0" top="20.0" />
+               </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/cancel_icon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
          </children>
       </HBox>
+      <TableView fx:id="TableItem" prefHeight="191.0" prefWidth="990.0">
+        <columns>
+          <TableColumn fx:id="nameItemColumn" prefWidth="75.0" text="Nombre del Item" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+         <VBox.margin>
+            <Insets left="20.0" right="600.0" />
+         </VBox.margin>
+      </TableView>
    </children>
 </VBox>
