--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyItem.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyItem.fxml
@@ -5,11 +5,13 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="470.0" prefWidth="1148.0" style="-fx-alignment: center;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller_Pages.ModifyItemController">
+<VBox prefHeight="470.0" prefWidth="1148.0" style="-fx-alignment: center; -fx-background-color: white;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller_Pages.ModifyItemController">
    <children>
       <VBox prefHeight="70.0" prefWidth="674.0" style="-fx-alignment: center;">
          <children>
@@ -25,38 +27,35 @@
             </Label>
          </children>
       </VBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox prefHeight="70.0" prefWidth="1148.0" style="-fx-alignment: start;">
          <padding>
             <Insets left="20.0" />
          </padding>
          <children>
-            <Label text="Escoja el item que será modificado">
+            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Escoja el item que será modificado">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets top="40.0" />
+                  <Insets left="20.0" top="20.0" />
                </HBox.margin>
             </Label>
             <ComboBox fx:id="ComboItems" prefHeight="26.0" prefWidth="184.0" style="-fx-font-size: 15pt;">
                <HBox.margin>
-                  <Insets left="20.0" top="40.0" />
+                  <Insets left="20.0" top="20.0" />
                </HBox.margin>
             </ComboBox>
          </children>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Label fx:id="NameItem" text="Nombre del Item">
+            <Label fx:id="NameItem" styleClass="labels" stylesheets="@../css/styles.css" text="Nombre del Item">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets right="20.0" />
+                  <Insets left="20.0" top="20.0" />
                </HBox.margin>
-               <padding>
-                  <Insets left="20.0" />
-               </padding>
             </Label>
          </children>
          <VBox.margin>
@@ -66,48 +65,68 @@
             <Insets left="20.0" />
          </padding>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Label text="Nuevo nombre del Item">
+            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Nuevo nombre del Item">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets right="20.0" />
+                  <Insets left="20.0" top="20.0" />
                </HBox.margin>
-               <padding>
-                  <Insets left="20.0" />
-               </padding>
             </Label>
             <TextField fx:id="TxtNewName" prefColumnCount="10">
                <font>
                   <Font name="Roboto" size="17.0" />
                </font>
+               <HBox.margin>
+                  <Insets left="20.0" top="20.0" />
+               </HBox.margin>
             </TextField>
             <Label text="*" textFill="#e10808">
                <font>
                   <Font name="Roboto Black" size="14.0" />
                </font>
+               <HBox.margin>
+                  <Insets top="20.0" />
+               </HBox.margin>
             </Label>
          </children>
          <padding>
             <Insets left="20.0" />
          </padding>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Button fx:id="BtnCancel" mnemonicParsing="false" onMouseClicked="#closeDialog" text="Cancelar">
+            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#UpdateItem" styleClass="roundButton" stylesheets="@../css/styles.css" text="Ingresar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets right="200.0" />
+                  <Insets left="20.0" />
                </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/update_icon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
-            <Button mnemonicParsing="false" onMouseClicked="#UpdateItem" text="Ingresar">
+            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
+               <HBox.margin>
+                  <Insets left="100.0" right="200.0" />
+               </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/cancel_icon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
          </children>
       </HBox>
