--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddMeasurement.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddMeasurement.fxml
@@ -29,7 +29,7 @@
       </VBox>
       <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Nombre de la Medida">
+            <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Nombre de la Medida">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -66,7 +66,7 @@
             <Insets left="20.0" />
          </padding>
          <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Escoja el item que será añadido la nueva medida">
+            <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Escoja el item que será añadido la nueva medida">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -83,7 +83,7 @@
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#AddMeasurement" styleClass="roundButton" stylesheets="@../css/styles.css" text="Ingresar">
+            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#AddMeasurement" prefHeight="62.0" prefWidth="183.0" styleClass="saveButton" stylesheets="@../css/styles.css" text="Ingresar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -98,7 +98,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
+            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="62.0" prefWidth="194.0" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
