--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AssignMeasurementToItem.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AssignMeasurementToItem.fxml
@@ -32,7 +32,7 @@
             <Insets left="20.0" />
          </padding>
          <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Escoga un item ">
+            <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Escoga un item ">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -52,7 +52,7 @@
             <Insets left="20.0" />
          </padding>
          <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Escoga una medida ">
+            <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Escoga una medida ">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -69,7 +69,7 @@
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#InsertMeasurementOfAItem" styleClass="roundButton" stylesheets="@../css/styles.css" text="Ingresar">
+            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#InsertMeasurementOfAItem" styleClass="saveButton" stylesheets="@../css/styles.css" text="Ingresar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -84,7 +84,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
+            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
