--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyEliminateItemAdded.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyEliminateItemAdded.fxml
@@ -28,7 +28,7 @@
             </Label>
             <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                <children>
-                  <Label prefHeight="30.0" prefWidth="241.0" styleClass="labels" stylesheets="@../css/styles.css" text="Estado de la Obra">
+                  <Label prefHeight="30.0" prefWidth="241.0" styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Estado de la Obra">
                      <font>
                         <Font name="Roboto Black" size="20.0" />
                      </font>
@@ -77,7 +77,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Detalle del Producto">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Detalle del Producto">
                      <font>
                         <Font name="Roboto Medium" size="20.0" />
                      </font>
@@ -115,7 +115,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Detalles Adicionales">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Detalles Adicionales">
                      <font>
                         <Font name="Roboto Medium" size="19.0" />
                      </font>
@@ -138,7 +138,7 @@
                         <Insets bottom="5.0" top="20.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Fecha de entrega">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Fecha de entrega">
                      <font>
                         <Font name="Roboto Medium" size="18.0" />
                      </font>
@@ -165,7 +165,7 @@
                   </HBox>
                   <HBox prefHeight="78.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                      <children>
-                        <Label styleClass="labels" stylesheets="@../css/styles.css" text="Precio Total">
+                        <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Precio Total">
                            <font>
                               <Font name="Roboto Medium" size="18.0" />
                            </font>
@@ -189,7 +189,7 @@
                               <Insets right="20.0" />
                            </HBox.margin>
                         </Label>
-                        <Label fx:id="PaymentDone" styleClass="labels" stylesheets="@../css/styles.css" text="Abonado">
+                        <Label fx:id="PaymentDone" styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Abonado">
                            <font>
                               <Font name="Roboto Medium" size="20.0" />
                            </font>
@@ -204,7 +204,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
                      <children>
-                        <Button fx:id="BtnAddItem" alignment="TOP_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#onUpdateHandiworkDetail" styleClass="roundButton" stylesheets="@../css/styles.css" text="Modificar Item">
+                        <Button fx:id="BtnAddItem" alignment="TOP_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#onUpdateHandiworkDetail" prefHeight="62.0" prefWidth="264.0" styleClass="saveButton" stylesheets="@../css/styles.css" text="Modificar Item">
                            <font>
                               <Font name="Roboto Medium" size="16.0" />
                            </font>
@@ -219,7 +219,7 @@
                               <Insets bottom="20.0" right="300.0" top="20.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="71.0" prefWidth="174.0" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
+                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="62.0" prefWidth="213.0" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
                            <font>
                               <Font name="Roboto Medium" size="16.0" />
                            </font>
