--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyMeasurement.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ModifyMeasurement.fxml
@@ -32,7 +32,7 @@
             <Insets left="20.0" />
          </padding>
          <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Escoga la medida que será modificado">
+            <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Escoga la medida que será modificado">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -49,7 +49,7 @@
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Label fx:id="NameMeasurement" styleClass="labels" stylesheets="@../css/styles.css" text="Nombre de la Medida">
+            <Label fx:id="NameMeasurement" styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Nombre de la Medida">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -67,7 +67,7 @@
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Label styleClass="labels" stylesheets="@../css/styles.css" text="Nuevo nombre de la medida">
+            <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Nuevo nombre de la medida">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -98,7 +98,7 @@
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
          <children>
-            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#UpdateMeasurement" styleClass="roundButton" stylesheets="@../css/styles.css" text="Modificar">
+            <Button contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#UpdateMeasurement" styleClass="modifyButton" stylesheets="@../css/styles.css" text="Modificar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
@@ -113,7 +113,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
+            <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
                </font>
