--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ShowPaymentsItem.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ShowPaymentsItem.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -17,7 +18,7 @@
    <content>
       <VBox prefHeight="810.0" prefWidth="1006.0" style="-fx-alignment: start;">
          <children>
-            <Label fx:id="StatePayment" styleClass="labels" stylesheets="@../css/styles.css" text="Estado de Pago: Pendiente">
+            <Label fx:id="StatePayment" styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Estado de Pago: Pendiente">
                <font>
                   <Font name="Roboto Black" size="18.0" />
                </font>
@@ -29,7 +30,7 @@
                <children>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Label fx:id="TotalCost" styleClass="labels" stylesheets="@../css/styles.css" text="Precio Total">
+                        <Label fx:id="TotalCost" styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Precio Total">
                            <font>
                               <Font name="Roboto Medium" size="18.0" />
                            </font>
@@ -44,7 +45,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Label fx:id="PaymentDone" styleClass="labels" stylesheets="@../css/styles.css" text="Abonado">
+                        <Label fx:id="PaymentDone" styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Abonado">
                            <font>
                               <Font name="Roboto Medium" size="20.0" />
                            </font>
@@ -56,7 +57,7 @@
                   </HBox>
                   <HBox prefHeight="78.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                      <children>
-                        <Label fx:id="ActualDate" styleClass="labels" stylesheets="@../css/styles.css" text="Fecha de Pago">
+                        <Label fx:id="ActualDate" styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Fecha de Pago">
                            <font>
                               <Font name="Roboto Medium" size="18.0" />
                            </font>
@@ -69,7 +70,7 @@
                               <Insets top="20.0" />
                            </HBox.margin>
                         </DatePicker>
-                        <Label styleClass="labels" stylesheets="@../css/styles.css" text="Abono">
+                        <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Abono">
                            <font>
                               <Font name="Roboto Medium" size="18.0" />
                            </font>
@@ -93,20 +94,16 @@
                               <Insets top="20.0" />
                            </HBox.margin>
                         </Label>
-                        <Button fx:id="BtnAddPayment" alignment="TOP_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#InsertPayment" styleClass="roundButton" stylesheets="@../css/styles.css">
+                        <Button fx:id="BtnAddPayment" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#InsertPayment" styleClass="modifyButton" stylesheets="@../css/styles.css">
                            <font>
                               <Font name="Roboto Medium" size="16.0" />
                            </font>
-                           <graphic>
-                              <ImageView fitHeight="35.0" fitWidth="35.0">
-                                 <image>
-                                    <Image url="@Images/add_icon.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
                            <HBox.margin>
                               <Insets left="35.0" top="10.0" />
                            </HBox.margin>
+                           <graphic>
+                              <FontAwesomeIcon fill="WHITE" glyphName="PLUS" size="2em" />
+                           </graphic>
                         </Button>
                      </children>
                      <VBox.margin>
@@ -123,7 +120,7 @@
                   </TableView>
                   <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
                      <children>
-                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="71.0" prefWidth="174.0" styleClass="roundButton" stylesheets="@../css/styles.css" text="Cancelar">
+                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="82.0" prefWidth="232.0" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
                            <font>
                               <Font name="Roboto Medium" size="16.0" />
                            </font>
