--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddItem.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/AddItem.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -28,13 +29,17 @@
             </Label>
             <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                <children>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Seleccione el tipo de producto">
+                  <Label stylesheets="@../css/styles.css" text="Seleccione el tipo de producto">
                      <font>
                         <Font name="Roboto Black" size="20.0" />
                      </font>
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
+                     <styleClass>
+                        <String fx:value="labels" />
+                        <String fx:value="labelsBlack" />
+                     </styleClass>
                   </Label>
                   <ComboBox fx:id="ComboItems" prefHeight="30.0" prefWidth="250.0" promptText="Seleccione un tipo de producto" style="-fx-font-size: 10pt;" />
                   <Label text="*" textFill="#c20c0c">
@@ -67,7 +72,7 @@
             </HBox>
             <VBox prefHeight="360.0" prefWidth="1396.0" style="-fx-alignment: start;" VBox.vgrow="SOMETIMES">
                <children>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Detalle del Producto">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Detalle del Producto">
                      <font>
                         <Font name="Roboto Medium" size="20.0" />
                      </font>
@@ -104,7 +109,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label styleClass="labels" stylesheets="@../css/styles.css" text="Detalles Adicionales">
+                  <Label styleClass="labelsBlack" stylesheets="@../css/styles.css" text="Detalles Adicionales">
                      <font>
                         <Font name="Roboto Medium" size="19.0" />
                      </font>
