--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/css/styles.css
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/css/styles.css
@@ -30,6 +30,12 @@ and open the template in the editor.
     -fx-background-color: #F2FAFF;
 
 }
+.radiusBorderPanelOptionBlue{
+    -fx-border-radius: 10 10 10 10;
+    -fx-background-radius: 10 10 10 10;
+    -fx-background-color: #1C5D99;
+
+}
 .radiusTitlePane{
     -fx-border-radius: 10 10 10 10;
     -fx-background-radius: 10 10 10 10;
@@ -84,6 +90,13 @@ and open the template in the editor.
     -fx-text-fill: white;
 
 }
+.labelsSmall{
+    -fx-font-family: 'Roboto Black' , 'Lato', 'Arial';
+    -fx-font-size: 2em;
+    -fx-text-fill: white;
+
+}
+
 .labelsBlack{
     -fx-font-family: 'Roboto Black' , 'Lato', 'Arial';
     -fx-font-size: 2em;
@@ -122,7 +135,7 @@ and open the template in the editor.
 }
 
 .containerForm{
-    -fx-background-color: #ADD9F3;
+    -fx-background-color: #F5F9FF;
     -fx-effect: dropshadow(three-pass-box,rgba(0,0,0,0.1),10.0,0.0,0.0,10.0);
     -fx-background-radius:30;
 }
@@ -169,6 +182,12 @@ and open the template in the editor.
 .table-view .column-header {
     -fx-background-color: #1C5D99;
 
+}
+.table-row-cell:filled:selected {
+    -fx-background-color: #FFF7D6;
+}
+.table-row-cell:selected-row {
+    -fx-background-color: #FFF7D6;
 }
 
 .table-view .column-header .label {
@@ -307,6 +326,39 @@ and open the template in the editor.
 .cancelButton:pressed
 {
     -fx-padding: 8 15 13 15;
+    -fx-background-insets: 1 0 0 0,1 0 1 0,1 0 2 0,1 0 3 0;
+
+}
+
+/*button red cancel*/
+.cancelButtonTable
+{
+    -fx-padding: 3 8 8 6;
+    -fx-background-insets: 0,0 0 3 0,0 0 4 0,0 0 3 0;
+    -fx-background-radius: 8;
+    -fx-background-color:
+        linear-gradient(from 0% 93% to 0% 100%,#c5003b 0%,#bb0e41 100%),
+        #bb0e41,
+        #c20039,
+        radial-gradient(center 50% 50%, radius 100%,#ce1742,#c20039);
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75),4,0,0,1);
+    -fx-font-weight: bold;
+    -fx-font-size: 1em;
+    -fx-text-fill: white;
+}
+
+.cancelButtonTable:hover
+{
+
+    -fx-background-color:linear-gradient(from 0% 93% to 0% 100%,#c5003b 0%,#bb0e41 100%),
+        #bb0e41,
+        #c20039,
+        radial-gradient(center 50% 50%,radius 100%,#ee3f59,#c20039);
+}
+
+.cancelButtonTable:pressed
+{
+    -fx-padding: 3 8 6 6;
     -fx-background-insets: 1 0 0 0,1 0 1 0,1 0 2 0,1 0 3 0;
 
 }
