--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ShowPaymentsItem.fxml
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/View/ShowPaymentsItem.fxml
@@ -120,7 +120,7 @@
                   </TableView>
                   <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: start;">
                      <children>
-                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="82.0" prefWidth="232.0" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Cancelar">
+                        <Button fx:id="BtnCancel" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#closeDialog" prefHeight="82.0" prefWidth="232.0" styleClass="cancelButton" stylesheets="@../css/styles.css" text="Regresar">
                            <font>
                               <Font name="Roboto Medium" size="16.0" />
                            </font>
